// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader> matches snapshot 1`] = `
<div>
  <div
    class="loading-container loader css-1hn9l2b-container-container"
    data-testid="loader"
    id="main-loader"
  >
    <span
      class="css-1xdhyk6"
    >
      <span
        class="css-1wl1zro"
      />
      <span
        class="css-nfvbbo"
      />
      <span
        class="css-1xsdpkx"
      />
    </span>
  </div>
</div>
`;

exports[`<Loader> matches snapshot with fullscreen 1`] = `
<div>
  <div
    class="loading-container css-6ju4xn-container-container"
    data-testid="loader"
  >
    <span
      class="css-1xdhyk6"
    >
      <span
        class="css-1wl1zro"
      />
      <span
        class="css-nfvbbo"
      />
      <span
        class="css-1xsdpkx"
      />
    </span>
  </div>
</div>
`;
